--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "axios": "^0.21.0",
+    "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "next": "9.5.5",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.13.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-google-login": "^5.1.22",
+    "react-quill": "^1.3.5",
+    "react-render-html": "^0.6.0",
+    "reactstrap": "^8.6.0"
   }
 }
