--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "mdbreact": "^4.27.0",
     "moment": "^2.29.1",
     "next": "9.5.5",
     "nprogress": "^0.2.0",
@@ -21,6 +22,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-google-login": "^5.1.22",
+    "react-pro-sidebar": "^0.4.4",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "reactstrap": "^8.6.0"
